sameer side changes
2nd changes commit

--- a/dental_ai_agent/.env
+++ b/dental_ai_agent/.env
@@ -15,3 +15,4 @@ TWILIO_PHONE_NUMBER=+18666883811
 
 # Application
 BASE_URL=http://localhost:8000
+PUBLIC_BASE_URL=https://d4bd58921f87.ngrok-free.app
